--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "latest",
+    "@mui/styles": "^5.8.3",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
