Adicionando a função de login

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "latest",
     "@mui/styles": "^5.8.3",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "mongoose": "^6.3.8",
     "next": "latest",
     "process-env": "^2.0.2",
